<resources>
    <string name="app_name">COVID-19 Tracker</string>
    <string name="lgm">LetsGrowMore</string>
    <string name="dummy">dummy</string>
    <string name="active">Active :</string>
    <string name="confirmed">Confirmed :</string>
    <string name="migratedother">Migrated/Other :</string>
    <string name="deceased">Deceased :</string>
    <string name="recovered">Recovered :</string>
    <string name="delta">Delta :</string>
    <string name="up">Move to top</string>
</resources>